--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -21,7 +21,7 @@
   
   {% if site.jianshu_username %}
   <li>
-    <a target="_blank" href="https://www.jianshu.com/u/6f333144f665/{{ site.jianshu_username }}">
+    <a target="_blank" href="https://www.jianshu.com/u/6f333144f665/">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -31,7 +31,7 @@
   {% endif %}
   {% if site.github_username %}
   <li>
-    <a target="_blank" href="https://github.com/{{ site.github_username }}">
+    <a target="_blank" href="https://github.com/zhouXiaoR">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
