--- a/_includes/featured-tags.html
+++ b/_includes/featured-tags.html
@@ -7,7 +7,7 @@
     {% if include.bottom %}
         <hr class="hidden-sm hidden-xs">
     {% endif %}
-    <h5><a href="{{'/archive/' | prepend: site.baseurl }}">标签集</a></h5>
+    <h5><a href="{{'/archive/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
     <div class="tags">
         {% capture tags %}
         {% comment %}
@@ -19,10 +19,10 @@
                 <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}" 
                     href="{{ site.baseurl }}/archive/?tag={{ tag[0] | url_encode }}"
                     title="{{ tag[0] }}"
-                    rel="{{ tag[1].size }}">{{ tag[0] }}</a>__SEPARATOR__
+                    rel="{{ tag[1].size }}">{{ tag[0] }}</a>
         {% endif %}{% endfor %}
         {% endcapture %}
-        {{ tags | split:'__SEPARATOR__' | sort }}
+        {{ tags | split:'</a>' | sort | join:'</a>' }}
     </div>
 </section>
 {% endif %}
