--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,11 @@ layout: default
 
                 <!-- Multi-Lingual -->
                 {% if page.multilingual %}
-                    {% include multilingual-sel.html %}
+                <!-- Language Selector -->
+                <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+                    <option value="0" selected> 中文 Chinese </option>
+                    <option value="1"> 英文 English </option>
+                </select>
                 {% endif %}
 
 				{{ content }}
@@ -64,7 +68,7 @@ layout: default
             </div>  
 
     <!-- Side Catalog Container -->
-        {% unless page.no-catalog %}
+        {% if page.catalog %}
             <div class="
                 col-lg-2 col-lg-offset-0
                 visible-lg-block
@@ -78,7 +82,7 @@ layout: default
                     <ul class="catalog-body"></ul>
                 </div>
             </div>
-        {% endunless %}
+        {% endif %}
 
     <!-- Sidebar Container -->
             <div class="
@@ -152,9 +156,9 @@ layout: default
 <script>
     async("//cdnjs.cloudflare.com/ajax/libs/anchor-js/1.1.1/anchor.min.js",function(){
         anchors.options = {
-          visible: 'hover',
+          visible: 'always',
           placement: 'right',
-          // icon: '#'
+          icon: '#'
         };
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
