--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,12 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by zhouxr |
+                    Powered by <a href="https://zhouxr.work/">zhouxr</a> |
+
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://github.com/zhouXiaoR" >
+                        src="https://ghbtns.com/github-btn.html?user=zhouXiaoR&repo=zhouXiaoR.github.io&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
